--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "./",
+  "homepage": "https://paulinozelaya.github.io/videotutorial",
   "name": "videotutorial",
   "version": "0.1.0",
   "private": true,
