--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
     "json-server": "^0.17.0",
     "react": "^18.1.0",
     "react-audio-player": "^0.17.0",
+    "react-dailymotion": "^0.4.1",
     "react-dom": "^18.1.0",
+    "react-player": "^2.10.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "homepage": "https://proyectoagm.000webhostapp.com",
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
